# kube-logger

./: Cargo.toml
src/: main.rs
