[package]
name = "kube-logger"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
kube = { git = "https://github.com/bloveless/kube-rs.git", branch = "fix-getting-pod-logs", features = ["openapi"] }
tokio = { version = "0.2.6", features = ["full"] }